--- a/style/header.css
+++ b/style/header.css
@@ -1,49 +1,94 @@
-#header_vane > a > * {
+/* header */
+.logo > a > *, .logo > div > * {
     vertical-align: middle;
 }
 
-#header_vane > a > img {
+.logo > a > img, .logo > div > img {
     width: 32px;
     height: 32px;
 }
 
-#header_vane > a > span {
+.logo > a > span, .logo > a > span {
     vertical-align: inherit;
 }
 
-.h_body .svg {
+/* logo end */
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* menu */
+.navbar .svg {
     vertical-align: middle;
     width: 16px;
     height: 16px;
 }
 
-.h_body {
-    width: 100%;
-    height: 100px;
+.fas {
+    width: 32px;
+    height: 32px;
 }
 
-.nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 20px 30px;
-    color: white;
+.menu_header > li:hover {
+    transform: scale(1.2);
 }
-
-.title { font-size: 2em; }
-.title > a { color: white; }
-
-#menu > li:hover { transform: scale(1.1); }
-.fas:hover { transform: scale(1.2) }
 
 @media screen and (min-width: 625px) {
-    #menu { display: flex; }
-    #menu > li { padding: 10px; }
-    .fas { display: none; }
+    .menu_header {
+        display: flex;
+        list-style: none;
+    }
+
+    .menu_header > li {
+        padding: 8px 12px;
+    }
+
+    .fas, .menu_hr {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 625px) {
-    .nav { padding: 20px 30px; }
-    #menu { display: none; }
-    .fas { display: block; }
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 8px 24px;
+    }
+
+    .fas {
+        display: block;
+        align-items: baseline;
+        position: absolute;
+        right: 32px;
+    }
+
+    .menu_header {
+        padding-left: 0;
+        width: 100%;
+        flex-direction: column;
+        align-items: center;
+        display: none;
+    }
+
+    .menu_header > li {
+        width: 90%;
+        margin: 10px;
+    }
+
+    /* 확대 제거 */
+    li.menu_hr:hover {
+        transform: scale(1);
+    }
+
+    .menu_hr > hr {
+        background: rgba(255, 255, 255, 0.2);
+        height:1px;
+        border:0;
+    }
+
+    .fas.active, .menu_header.active {
+        display: flex;
+    }
 }
