--- a/style/main_style.css
+++ b/style/main_style.css
@@ -12,6 +12,10 @@ body {
     text-align: center;
 }
 
-h1, h2, h3, p, div, ul, li {
+h1, h2, h3, p, div, ul, li, label {
+    color: white;
+}
+
+hr {
     color: white;
 }
