--- a/style/library.css
+++ b/style/library.css
@@ -1,3 +1,7 @@
+b, p, a, div {
+    font-family: 'Nanum Gothic', sans-serif;
+}
+
 .library_header {
     border: 1px solid var(--border-color);
     border-radius: 0.5rem;
